inertia-core/src/solvers/snapshots/inertia_core__solvers__min_moves_board__test__empty.snap
---
source: src/solvers/min_moves_board.rs
expression: board
---
[
  002 002 002 002 002 002 002 002 001 002 002 002 002 002 002 002
  002 002 002 002 002 002 002 002 001 002 002 002 002 002 002 002
  002 002 002 002 002 002 002 002 001 002 002 002 002 002 002 002
  002 002 002 002 002 002 002 002 001 002 002 002 002 002 002 002
  002 002 002 002 002 002 002 002 001 002 002 002 002 002 002 002
  002 002 002 002 002 002 002 002 001 002 002 002 002 002 002 002
  002 002 002 002 002 002 002 002 001 002 002 002 002 002 002 002
  002 002 002 002 002 002 002 002 001 002 002 002 002 002 002 002
  001 001 001 001 001 001 001 001 000 001 001 001 001 001 001 001
  002 002 002 002 002 002 002 002 001 002 002 002 002 002 002 002
  002 002 002 002 002 002 002 002 001 002 002 002 002 002 002 002
  002 002 002 002 002 002 002 002 001 002 002 002 002 002 002 002
  002 002 002 002 002 002 002 002 001 002 002 002 002 002 002 002
  002 002 002 002 002 002 002 002 001 002 002 002 002 002 002 002
  002 002 002 002 002 002 002 002 001 002 002 002 002 002 002 002
  002 002 002 002 002 002 002 002 001 002 002 002 002 002 002 002
]
