inertia-core/src/solvers/snapshots/inertia_core__solvers__min_moves_board__test__fortress.snap
---
source: src/solvers/min_moves_board.rs
expression: board
---
[
  006 006 006 005 006 006 006 005 006 006 006 005 006 006 006 006
  006 006 006 005 006 006 006 005 006 006 006 005 006 006 006 006
  006 006 006 005 006 006 006 005 006 006 006 005 006 006 006 006
  006 006 006 005 006 006 006 005 006 006 006 005 006 006 006 006
  006 006 006 005 006 006 006 005 006 006 006 005 006 006 006 006
  006 006 006 005 006 006 006 005 006 006 006 005 006 006 006 006
  006 006 006 005 006 006 006 005 006 006 006 005 006 006 006 006
  006 006 006 005 006 006 006 005 006 006 006 005 006 006 006 006
  006 006 006 005 006 006 006 005 006 006 006 005 006 006 006 006
  007 007 007 005 006 006 006 005 006 006 006 005 007 007 007 007
  007 007 007 004 004 003 004 004 004 003 004 004 007 007 007 007
  007 007 007 005 005 003 004 004 004 003 005 005 007 007 007 007
  007 007 007 005 005 002 002 001 002 002 005 005 007 007 007 007
  007 007 007 005 005 003 002 001 002 003 005 005 007 007 007 007
  007 007 007 005 005 003 001 000 001 003 005 005 007 007 007 007
  007 007 007 005 005 003 002 001 002 003 005 005 007 007 007 007
]
