inertia-core/src/solvers/snapshots/inertia_core__solvers__min_moves_board__test__random_classic_gen_15.snap
---
source: src/solvers/min_moves_board.rs
expression: board
---
[
  003 003 002 002 003 003 003 003 003 002 003 002 003 002 003 003
  003 003 002 002 002 003 003 003 003 002 003 002 003 002 003 003
  003 003 002 002 002 003 003 003 003 002 003 002 003 002 003 003
  003 003 002 002 002 003 003 003 003 002 003 002 003 002 003 003
  003 003 002 002 002 004 003 003 003 002 003 002 003 002 003 003
  003 003 002 002 002 002 003 003 003 002 003 002 003 002 003 003
  003 003 002 002 002 002 003 003 003 002 003 002 002 002 004 004
  003 003 002 002 002 002 003 255 255 002 003 002 002 002 003 003
  003 003 002 002 002 002 003 255 255 002 003 002 002 002 003 003
  002 003 002 002 002 002 002 002 001 002 002 002 002 002 002 004
  002 002 002 002 002 002 003 002 001 002 002 002 002 002 002 003
  001 001 001 001 001 001 001 001 000 001 001 001 001 001 001 001
  002 002 002 002 002 002 003 002 001 002 002 002 002 002 002 002
  002 002 002 002 002 002 002 002 001 002 002 002 002 002 002 002
  002 002 002 002 002 002 002 002 001 002 002 002 002 002 002 002
  002 002 002 002 002 002 002 002 001 002 002 002 002 003 002 002
]
