inertia-core/src/solvers/snapshots/inertia_core__solvers__min_moves_board__test__random_classic_gen_21.snap
---
source: src/solvers/min_moves_board.rs
expression: board
---
[
  004 003 003 003 002 002 003 003 003 004 004 004 004 004 004 004
  003 003 003 003 002 002 003 003 004 004 004 004 004 004 004 004
  003 003 003 003 002 002 003 003 003 003 003 003 003 003 003 003
  003 003 003 003 002 002 003 003 003 003 003 003 003 003 003 003
  003 003 003 003 002 002 003 003 003 003 003 003 003 003 003 003
  003 003 004 003 002 002 003 003 003 003 003 004 004 004 004 005
  003 003 003 004 002 002 003 003 003 003 003 003 004 004 004 005
  002 002 002 001 002 002 002 255 255 004 004 004 005 004 004 005
  002 002 002 001 002 002 002 255 255 004 004 004 005 004 004 005
  003 003 003 000 001 001 003 004 004 004 004 004 004 004 004 004
  003 003 003 003 002 002 003 003 003 004 004 004 004 004 004 005
  003 003 003 003 002 002 003 003 003 003 004 004 004 004 004 004
  004 003 003 004 002 002 003 003 003 003 003 003 003 003 003 003
  003 003 003 003 002 002 003 003 003 003 003 004 004 004 004 004
  003 003 003 003 002 002 003 003 003 003 003 003 003 003 003 003
  004 003 003 004 002 002 003 003 004 004 004 004 004 004 004 004
]
