inertia-core/src/solvers/snapshots/inertia_core__solvers__min_moves_board__test__random_classic_gen_22.snap
---
source: src/solvers/min_moves_board.rs
expression: board
---
[
  005 005 006 005 003 003 003 003 003 003 003 003 002 004 003 004
  005 005 005 005 004 004 004 004 004 004 003 003 002 003 003 003
  005 005 005 005 004 004 004 004 004 003 003 003 002 003 003 003
  005 005 005 005 004 004 004 003 003 003 003 003 002 003 003 003
  005 005 005 005 004 004 003 003 003 003 003 003 002 003 003 003
  004 004 004 004 004 004 004 004 004 004 003 004 001 000 003 003
  005 006 005 005 004 004 004 004 004 003 002 002 002 001 002 002
  005 005 005 005 004 005 004 255 255 002 002 002 002 001 002 002
  005 005 005 005 004 005 004 255 255 003 003 003 002 003 003 003
  005 006 005 005 005 006 003 003 003 003 003 003 002 003 003 003
  004 004 004 004 004 004 004 004 004 003 003 003 002 003 003 004
  005 005 005 005 005 005 004 004 005 003 003 004 004 004 005 004
  005 005 005 005 005 005 005 004 004 003 003 004 004 004 004 004
  004 004 004 004 004 004 004 004 004 003 003 004 004 004 004 004
  005 005 005 005 005 006 004 004 004 003 003 004 004 004 004 004
  005 005 005 005 005 005 005 004 004 003 003 004 004 004 004 004
]
