inertia-core/src/solvers/snapshots/inertia_core__solvers__min_moves_board__test__shuffle_x.snap
---
source: src/solvers/min_moves_board.rs
expression: board
---
[
  007 007 006 006 006 006 004 004 005 005 006 006 007 007 008 008
  007 007 006 006 006 006 004 004 005 005 006 006 007 007 008 008
  007 007 006 006 006 006 004 004 005 005 006 006 007 007 007 007
  007 007 006 006 006 006 004 004 005 005 006 006 007 007 007 007
  005 005 005 005 005 005 004 004 005 005 006 006 006 006 006 006
  005 005 005 005 005 005 004 004 005 005 006 006 006 006 006 006
  005 005 005 005 005 005 004 004 005 005 005 005 005 005 005 005
  005 005 005 005 005 005 004 004 005 005 005 005 005 005 005 005
  004 004 004 004 004 003 004 004 004 004 004 004 004 004 004 004
  004 004 004 004 003 003 004 004 004 004 004 004 004 004 004 004
  003 003 003 002 003 003 003 003 005 005 005 005 006 006 006 006
  003 003 002 002 003 003 003 004 005 005 005 005 006 006 006 006
  002 001 002 002 002 002 004 004 005 005 005 005 006 006 006 006
  002 001 002 002 002 003 004 004 005 005 005 005 006 006 006 006
  001 000 001 001 003 003 004 004 005 005 005 005 007 007 007 007
  002 001 002 002 003 003 004 004 005 005 005 005 007 007 007 007
]
